# learncpp

./: .gitignore  README.md
lessons/basic-macro/: main.cpp
lessons/bit-flags/: main.cpp
lessons/cmake-project/: CMakeLists.txt  config.h  config.h.in  main.cpp
lessons/header-intro/: main.cpp
lessons/hello-world/: main.cpp
lessons/is-even/: even.cpp  even.h  main.cpp
lessons/multiple-files/: main.cpp
lessons/multiply-by-two/: main.cpp
opengl/: .clangd  CMakeLists.txt  compile_commands.json
opengl/include/: VAO.h  VBO.h  camera.h  shaderClass.h  textureClass.h
opengl/resources/shaders/: default.vert
opengl/src/: EBO.cpp  VAO.cpp  camera.cpp  glad.c  main.cpp  shaderClass.cpp  textureClass.cpp
